\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\name{NEWS}
\title{ R News}
\encoding{UTF-8}

\section{\Rlogo CHANGES IN R 3.0.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The macros used for the texinfo manuals have been changed to
      work better with the incompatible changes made in texinfo 5.x.
    }
  }
  
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item \file{Rdefines.h} has been tweaked so it can be included in
      C++ code with \file{R_exts/Boolean.h} (which is included by
      \file{R.h}).  Note though that \file{Rdefines.h} is not kept
      up-to-date, and \file{Rinternals.h} is preferred for new code.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{help.request()} could not determine the current version
      of \R on CRAN.  (\PR{15241})
      
      \item On Windows, \code{file.info()} failed on root directories unless
      the path was terminated with an explicit \code{"."}.  (\PR{15302})
      
      \item The \code{regmatches<-()} replacement function mishandled
      results coming from \code{regexpr()}.  (\PR{15311})

      \item Documentation for \code{setClass} and
      \code{representation} still suggested the deprecated argument
      \code{representation=}. (\PR{15312})
      
      \item \command{R CMD config} failed in an installed build of \R
      3.0.1 (only) when a sub-architecture was used.  (Reported by
      Berwin Turlach.)
      
      \item On Windows, the installer modified the \file{etc/Rconsole} and
      \file{etc/Rprofile.site} files even when default options were 
      chosen.  (Reported by Tal Galili.)
    }
  }
}

\section{\Rlogo CHANGES IN R 3.0.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{chooseCRANmirror()} and \code{chooseBioCmirror()} gain
      an \code{ind} argument (like \code{setRepositories()}).

      \item \code{mcparallel} has a new argument \code{mc.interactive}